--- a/index.html
+++ b/index.html
@@ -8,8 +8,34 @@
   </head>
   <body>
     <div class="app container my-5">
-      <h1>Hello world</h1>
-      <p>Happy {{ day }}! It's {{ now.getHours() }}:{{ now.getMinutes() }}.</p>
+      <div class="card-body">
+        <h1>Le titre de mon projet</h1>
+        <p>Mon chapeau en quelques lignes</p>
+      </div>
+
+      <main class="row">
+        <div class="col-12 col-md-8">
+          <div class=" card-body">
+            <nav class="navbar">
+              <a class="navbar-brand" href="#">
+                <img @click="person = 'Christian'" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Christian_Lindner_%28Martin_Rulsch%29_1.jpg/220px-Christian_Lindner_%28Martin_Rulsch%29_1.jpg" width="100" height="100" alt="Chrstian Lindner">
+                <img  @click="person = 'Jules'" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Christian_Lindner_%28Martin_Rulsch%29_1.jpg/220px-Christian_Lindner_%28Martin_Rulsch%29_1.jpg" width="100" height="100" alt="Chrstian Lindner">
+              </a>
+            </nav>
+          </div>
+        </div>
+      </main>
+
+      <main class="row">
+        <div class=" col-12 col-md-8">
+          <div class=" card">
+            <img v-if="person === 'Christian'" class="card-body">
+              ggggggg
+            <img  v-if="person === 'Jules'"  class="body">
+              zzzzzz
+          </div>
+        </div>
+      </main>
     </div>
 
     <script src="vendors/vue.min.js"></script>
