--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Session 11</title>
+    <title>Le titre de mon projet</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
   </head>
@@ -18,12 +18,12 @@
           <div class=" card-body">
             <nav class="navbar">
               <a class="navbar-brand" href="#">
-                <img class="rounded-circle color" @click="person = 'Merkel'" src="https://www.bundeskanzlerin.de/Webs/BKin/DE/AngelaMerkel/Biografie/bundeskanzlerin_angela_merkel.jpg?__blob=bpaDownload&amp;v=5" width="100" height="100" alt="Angela Merkel">
-                <img class="rounded-circle color" @click="person = 'Seehofer'" src="http://media-cdn.sueddeutsche.de/image/sz.1.1287420/940x528?v=1355413418000" width="100" height="100" alt="Horst Seehofer">
-                <img class="rounded-circle color" @click="person = 'Lindner'" src="https://s4.reutersmedia.net/resources/r/?m=02&d=20170805&t=2&i=1195897998&r=LYNXMPED740BV&w=1280" width="100" height="100" alt="Christian Lindner">
-                <img class="rounded-circle color" @click="person = 'Oezdemir'" src="http://amp.dw.com/image/39444315_401.png" width="100" height="100" alt="Cem Özdemir">
-                <img class="rounded-circle color" @click="person = 'Steinmeier'" src="http://www.bundespraesident.de/SharedDocs/Bilder/DE/Termine/Frank-Walter-Steinmeier/Archivbilder/Portraetbilder/Offizielles-Portraet-Steinmeier-download.jpg?__blob=poster&v=4" width="100" height="100" alt="Frank-Walter Steinmeier">
-                <img class="rounded-circle color" @click="person = 'Schulz'" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Schulz%2C_Martin-2047.jpg/1200px-Schulz%2C_Martin-2047.jpg" width="100" height="100" alt="Martin Schulz">
+                <img class="rounded-circle picto" @click="person = 'Merkel'" src="https://www.bundeskanzlerin.de/Webs/BKin/DE/AngelaMerkel/Biografie/bundeskanzlerin_angela_merkel.jpg?__blob=bpaDownload&amp;v=5" width="100" height="100" alt="Angela Merkel">
+                <img class="rounded-circle picto" @click="person = 'Seehofer'" src="http://media-cdn.sueddeutsche.de/image/sz.1.1287420/940x528?v=1355413418000" width="100" height="100" alt="Horst Seehofer">
+                <img class="rounded-circle picto" @click="person = 'Lindner'" src="https://s4.reutersmedia.net/resources/r/?m=02&d=20170805&t=2&i=1195897998&r=LYNXMPED740BV&w=1280" width="100" height="100" alt="Christian Lindner">
+                <img class="rounded-circle picto" @click="person = 'Oezdemir'" src="http://amp.dw.com/image/39444315_401.png" width="100" height="100" alt="Cem Özdemir">
+                <img class="rounded-circle picto" @click="person = 'Steinmeier'" src="http://www.bundespraesident.de/SharedDocs/Bilder/DE/Termine/Frank-Walter-Steinmeier/Archivbilder/Portraetbilder/Offizielles-Portraet-Steinmeier-download.jpg?__blob=poster&v=4" width="100" height="100" alt="Frank-Walter Steinmeier">
+                <img class="rounded-circle picto" @click="person = 'Schulz'" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Schulz%2C_Martin-2047.jpg/1200px-Schulz%2C_Martin-2047.jpg" width="100" height="100" alt="Martin Schulz">
               </a>
             </nav>
           </div>
@@ -63,7 +63,7 @@
             </div>
 
             <div v-if="person === 'Oezdemir'" class="card-body">
-              <h4 class="card-title">Cem Özedemir</h4>
+              <h4 class="card-title">Cem Özdemir</h4>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
