--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Le titre de mon projet</title>
+    <title>Négociations gouvernementales</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div class="app container my-5">
       <div class="card-body">
-        <h1>Le titre de mon projet</h1>
+        <h1>Les acteurs des négociations gouvernementales</h1>
         <p>Mon chapeau en quelques lignes</p>
       </div>
 
