--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <div class="app container my-5">
       <div class="card-body">
         <h1>Les acteurs des négociations gouvernementales</h1>
-        <p>Mon chapeau en quelques lignes</p>
+        <p class="card-text mt-3">Mon chapeau en quelques lignes Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+        <h6 class="card-subtitle mt-3 border-top text-muted">Jan-Hendrik Maier</h6>
       </div>
+      
 
       <main class="row">
         <div class="col-12 col-md-8">
@@ -37,7 +40,13 @@
       <main class="row">
         <div class=" col-12 col-md-8">
             <div v-if="person === 'Merkel'" class="card-body">
-              <h4 class="card-title">Angela Merkel</h4>
+              <h4 class="card-title mb-3">Angela Merkel</h4>
+              <ul class="list-group mb-5">
+                <li class="list-group-item">Age: </li>
+                <li class="list-group-item">Parti: </li>
+                <li class="list-group-item">Fonction: </li>
+              </ul>
+
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -47,7 +56,12 @@
             </div>
 
             <div v-if="person === 'Seehofer'" class="card-body">
-              <h4 class="card-title">Horst Seehofer</h4>
+              <h4 class="card-title mb-3">Horst Seehofer</h4>
+              <ul class="list-group mb-5">
+                <li class="list-group-item">Age: </li>
+                <li class="list-group-item">Parti: </li>
+                <li class="list-group-item">Fonction: </li>
+              </ul>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -57,7 +71,12 @@
             </div>
 
             <div v-if="person === 'Lindner'" class="card-body">
-              <h4 class="card-title">Christian Lindner</h4>
+              <h4 class="card-title mb-3">Christian Lindner</h4>
+              <ul class="list-group mb-5">
+                <li class="list-group-item">Age: </li>
+                <li class="list-group-item">Parti: </li>
+                <li class="list-group-item">Fonction: </li>
+              </ul>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -67,7 +86,12 @@
             </div>
 
             <div v-if="person === 'Oezdemir'" class="card-body">
-              <h4 class="card-title">Cem Özdemir</h4>
+              <h4 class="card-title mb-3">Cem Özdemir</h4>
+              <ul class="list-group mb-5">
+                <li class="list-group-item">Age: </li>
+                <li class="list-group-item">Parti: </li>
+                <li class="list-group-item">Fonction: </li>
+              </ul>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -77,7 +101,12 @@
             </div>
 
             <div v-if="person === 'Goering'" class="card-body">
-              <h4 class="card-title">Katring Göring-Eckard</h4>
+              <h4 class="card-title mb-3">Katring Göring-Eckard</h4>
+              <ul class="list-group mb-5">
+                <li class="list-group-item">Age: </li>
+                <li class="list-group-item">Parti: </li>
+                <li class="list-group-item">Fonction: </li>
+              </ul>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -87,7 +116,12 @@
             </div>
 
             <div v-if="person === 'Steinmeier'" class="card-body">
-              <h4 class="card-title">Frank-Walter Steinmeier</h4>
+              <h4 class="card-title mb-3">Frank-Walter Steinmeier</h4>
+              <ul class="list-group mb-5">
+                <li class="list-group-item">Age: </li>
+                <li class="list-group-item">Parti: </li>
+                <li class="list-group-item">Fonction: </li>
+              </ul>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -97,7 +131,12 @@
             </div>
 
             <div v-if="person === 'Schulz'" class="card-body">
-              <h4 class="card-title">Martin Schulz</h4>
+              <h4 class="card-title mb-3">Martin Schulz</h4>
+              <ul class="list-group mb-5">
+                <li class="list-group-item">Age: </li>
+                <li class="list-group-item">Parti: </li>
+                <li class="list-group-item">Fonction: </li>
+              </ul>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
